product and payments

--- a/greatkart/templates/base.html
+++ b/greatkart/templates/base.html
@@ -28,6 +28,10 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<!-- PayPal Script -->
+<script src="https://www.paypal.com/sdk/js?client-id=Aekw3nHDDo5jx-G0-_qH4OeTTEa8F_xxRTyvnUH74gOrN_69rWYf-2JJ407r3pC-Q9kncCHyN_Dgm4AS&currency=USD"></script>
+
+
 <script type="text/javascript">
 /// some script
 
